--- a/src/components/Auth/_Auth.scss
+++ b/src/components/Auth/_Auth.scss
@@ -1,14 +1,21 @@
 @import 'main';
 
 .Auth {
-  //padding-top: calc(4rem + 30vh);
-  //padding-bottom: 10vh;
   width: 100%;
   height: 100%;
   overflow: hidden;
+  @include center;
 
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
+  &__Content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__Form {}
+
+  &__Label {
+    font-family: Mallory-Book;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
 }
