--- a/src/components/Form/_Form.scss
+++ b/src/components/Form/_Form.scss
@@ -3,21 +3,11 @@
 $input-width: 23rem;
 
 .Form {
-  width: 100%;
-  height: 100%;
-  @include center;
-
   &__Form {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     font-size: 2rem;
-  }
-
-  &__Label {
-    font-family: Mallory-Book;
-    font-size: 1.5rem;
-    margin-bottom: 1.5rem;
   }
 
   &__Input {
@@ -38,7 +28,8 @@ $input-width: 23rem;
     }
 
     &::placeholder {
-      color: $color-primary;
+      color: white;
+      opacity: 0.8;
     }
   }
 
